# hexlet_pytest

./: README.md  pyproject.toml
.github/workflows/: hello_world.yml
hexlet_pytest/: example.py
tests/: test_datetime.py  test_example.py  test_stack.py
